# patterns_of_enterprise_application_architecture

./: pyproject.toml
dev3_transaction_script/: models.py  money.py  tests.py  transaction_script.py
dev4_table_module/: table_module.py
dev5_service_layer/: models.py  service_layer.py  table_modules.py
