[tool.poetry]
name = "envp"
version = "0.1.0"
description = ""
authors = ["s_gnedoy <siergiej@solvbot.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
sqlmodel = "^0.0.14"
alembic = "^1.13.1"
uvicorn = "^0.27.0.post1"
psycopg2 = "^2.9.9"
parameterized = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
